Update existing queires with expense share columns
