# internal/http/api/impl_trx_line.go
@@ -37,6 +37,7 @@ func (s ApiServer) PostBudgetBudgetIdAccountAccountIdTransactionTrxIdLine(ctx co
 		TrxID:         int64(trxID),
 		DestAccountID: intToNullInt64(request.Body.DestAccountId),
 		CategoryID:    intToNullInt64(request.Body.CategoryId),
+		ExpenseShareID:    intToNullInt64(request.Body.ExpenseShareId),
 		Income:        BoolPtrToBool(request.Body.Income),
 		Outflow:       int64(request.Body.Outflow),
 		Inflow:        int64(request.Body.Inflow),
@@ -52,6 +53,7 @@ func (s ApiServer) PostBudgetBudgetIdAccountAccountIdTransactionTrxIdLine(ctx co
 		TrxId:         int(line.TrxID),
 		DestAccountId: nullInt64ToInt(line.DestAccountID),
 		CategoryId:    nullInt64ToInt(line.CategoryID),
+		ExpenseShareId: nullInt64ToInt(line.ExpenseShareID),
 		Income:        line.Income,
 		Outflow:       int(line.Outflow),
 		Inflow:        int(line.Inflow),
@@ -92,6 +94,7 @@ func (s ApiServer) PutBudgetBudgetIdAccountAccountIdTransactionTrxIdLineId(ctx c
 		TrxID:         int64(trxID),
 		DestAccountID: intToNullInt64(request.Body.DestAccountId),
 		CategoryID:    intToNullInt64(request.Body.CategoryId),
+		ExpenseShareID:    intToNullInt64(request.Body.ExpenseShareId),
 		Income:        BoolPtrToBool(request.Body.Income),
 		Outflow:       int64(request.Body.Outflow),
 		Inflow:        int64(request.Body.Inflow),
@@ -108,6 +111,7 @@ func (s ApiServer) PutBudgetBudgetIdAccountAccountIdTransactionTrxIdLineId(ctx c
 		TrxId:         int(line.TrxID),
 		DestAccountId: nullInt64ToInt(line.DestAccountID),
 		CategoryId:    nullInt64ToInt(line.CategoryID),
+		ExpenseShareId: nullInt64ToInt(line.ExpenseShareID),
 		Income:        line.Income,
 		Outflow:       int(line.Outflow),
 		Inflow:        int(line.Inflow),
